appId: ${APP_ID}
---
- launchApp:
    clearState: true
- assertVisible:
    id: auth-screen
- tapOn:
    id: sign-in
- assertVisible: "Sign in"
